NetworkJobListener now registers with server #gklst

--- a/SmasherServer/views/smasher.jade
+++ b/SmasherServer/views/smasher.jade
@@ -11,6 +11,11 @@ h1= title
 						#{smasher}
 				tr
 					td
+						span.smasherinfo Version
+					td 
+						| 0.0.1
+				tr
+					td
 						span.smasherinfo State
 					td
 						| Online
